--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="google-site-verification" content="SGufuJxs_w4XijkI8HgHJ76W2y-K7vb7PrqkG2RLfhA" />
     <meta name="description" content="Halte4d merupakan agen togel online terbaik di tahun 2023 dengan total 8 pasaran togel dan minimal taruhan togel 100 perak"/>
     <meta name="keywords" content="Halte4d, Halte4d 4d, slot Halte4d, judi slot Halte4d, agen slot Halte4d, situs Halte4d, link Halte4d"/>
-    <link itemprop="mainEntityOfPage" rel="canonical" href="http://botak.dontkillmyapp.com/">
+    <link itemprop="mainEntityOfPage" rel="canonical" href="https://botak.dontkillmyapp.com/">
     <meta name="robots" content="index, follow"/>
     <meta name="page-locale" content="id,en">
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -27,7 +27,7 @@
     <meta name="og:image" content="https://i.ibb.co/XykGQ2Y/Untitled-3.jpg">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="200">
-    <meta name="og:url" content="http://botak.dontkillmyapp.com/">
+    <meta name="og:url" content="https://botak.dontkillmyapp.com/">
     <meta name="og:site_name" content="Halte4d">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
@@ -76,7 +76,7 @@
     <div class="container">
         <div class="row">
         <div class="col-md-12 text-center">
-        <a class="btn btn-daf" href="http://botak.dontkillmyapp.com/" target="_blank" rel="nofollow noopener">Link Daftar Situs Slot Halte4d</a>
+        <a class="btn btn-daf" href="https://botak.dontkillmyapp.com/" target="_blank" rel="nofollow noopener">Link Daftar Situs Slot Halte4d</a>
     </div>
     </div>
     </div>
@@ -121,7 +121,7 @@
 
 <h1 style="text-align: center">Halte4d: Agen Togel Online Terpercaya 2023</h1>
 
-<p style="text-align: justify"><a href="http://botak.dontkillmyapp.com/">Halte4D</a> adalah salah satu situs judi slot online terpercaya di Indonesia dengan berbagai jenis permainan judi online mulai dari togel, casino, judi bola, temabak ikan dan tidak lupa ada permainan judi slot online. Situs dengan pelayanan terbaik yang kami sediakan untuk kalian member Halte4D mulai dari cs kita yang aktif 24 jam dan customer relationship management untuk memberikan pelayanan terbaik kepada member Halte4D setiap harinya. Situs Game Slot Online yang sudah lumayan lama ada di Indonesia yang banyak di gemari oleh setiap orang orang yang ada di Indonesia mulai dari kalangan anak anak muda hingga remaja dan orang tua, bahkan lansia pun masih bisa dan di perbolehkan untuk bermain pada situs slot online karena untuk bermain judi slot online ini yang lebih tepatnya tidak memiliki batasan umur terkecuali kalian belum memiliki rekening untuk melakukan deposit dan withdraw karena itu akan sangat diperlukan apabila ingin bermain game slot online terpercaya dan terbaik.</p>
+<p style="text-align: justify"><a href="https://botak.dontkillmyapp.com/">Halte4D</a> adalah salah satu situs judi slot online terpercaya di Indonesia dengan berbagai jenis permainan judi online mulai dari togel, casino, judi bola, temabak ikan dan tidak lupa ada permainan judi slot online. Situs dengan pelayanan terbaik yang kami sediakan untuk kalian member Halte4D mulai dari cs kita yang aktif 24 jam dan customer relationship management untuk memberikan pelayanan terbaik kepada member Halte4D setiap harinya. Situs Game Slot Online yang sudah lumayan lama ada di Indonesia yang banyak di gemari oleh setiap orang orang yang ada di Indonesia mulai dari kalangan anak anak muda hingga remaja dan orang tua, bahkan lansia pun masih bisa dan di perbolehkan untuk bermain pada situs slot online karena untuk bermain judi slot online ini yang lebih tepatnya tidak memiliki batasan umur terkecuali kalian belum memiliki rekening untuk melakukan deposit dan withdraw karena itu akan sangat diperlukan apabila ingin bermain game slot online terpercaya dan terbaik.</p>
 
 <p style="text-align: justify">Telat dikenal atau diketahui sebagai agen judi slot online pertercapaya di indonesia kini halte4d dapat memberikan banyak kenyamanan dan kepercayaan untuk kalian para member atau pencita judi slot online yang terlebih utama penggemar game slot onilne tahun 2023 ini.game judi slot online sudah dapat dimainkan dimanapun dan kapanpun saat ini slot online dapat dikenal lebih banyak orang dan lebih mudah untuk di akses hanya dengan beberapa kebutuhan saja seperti internet dan handphone atau yang sering orang sebut dengan gadget untuk bermain slot online serta rekening bank atau e wallet untuk melakukan deposit dan withdraw. Saat ini pun sudah semakain canggih yang dimanapun tentunya terdapat koneksi internet sehinnga tidak membuat kalian sulit untuk bermain game judi slot online, berbeda jengan zaman dulu yang dimana setiap pejudi harus bermain secara offline atau secara langsung pergi ke tempat judi dan hal tersebut sulit untuk dilakukan serta merepotkan karena di indonesia ini judi online merupakan hal yang di larang karena melawan peraturan negara yang telat di buat.</p>
 
